--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
         <button class="tablinks" onclick="openTab(event, 'Races')">Razas</button>
         <button class="tablinks" onclick="openTab(event, 'Religions')">Religiones</button>
         <button class="tablinks" onclick="openTab(event, 'Gods')">Dioses</button>
+        <button class="tablinks" onclick="openTab(event, 'TimeLine')">TimeLine</button>
     </div>
 
     <div id="Home" class="tabcontent">
@@ -270,11 +271,14 @@
     </div>
     <div id="Religions" class="tabcontent">
         <button id="lucianismo" class="religion-button" onclick="openModal('LucianismoModal',' ');">
-            Lucianismo 
+            Lucianismo
         </button>
     </div>
     <div id="Gods" class="tabcontent">
-
+        <h3>TODO</h3>
+    </div>
+    <div id="Home" class="tabcontent">
+        <h3>TODO</h3>
     </div>
 
     <!-- Modal -->
@@ -379,7 +383,7 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal('StilportModal')">&times;</span>
             <h2>Stilport</h2>
-            
+
         </div>
     </div>
 
