--- a/index.html
+++ b/index.html
@@ -116,8 +116,6 @@
                 padding-left: 40px;
                 padding-right: 40px;
                 border: 1px solid #888;
-                /*width: 1500px;
-        height: 900px;*/
                 width: 60vw;
                 height: 80vh;
                 overflow: auto;
@@ -177,18 +175,20 @@
                 }
 
             #map-container {
-                position: relative;
-                width: 50vw; /* 50% del ancho de la ventana */
-                height: 50vh; /* 50% del alto de la ventana */
-                box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Opcional, para mejorar la visibilidad */
+                position: fixed;
+                width: 80vw; /* 80% del ancho de la ventana */
+                height: 60vh; /* 60% del alto de la ventana */
+                border: 0px solid #ccc; /* Borde para visualizar el contenedor */
+                margin: 0px auto; /* Centrado horizontal y algo de margen */
             }
 
             img {
                 width: 100%;
                 height: 100%;
                 display: block;
-                object-fit: cover; /* Asegura que la imagen cubra completamente el contenedor sin deformarse */
+                object-fit: contain; /* Cambio clave: ajusta la imagen para que se muestre completamente sin cortes */
             }
+
 
             .marker {
                 position: absolute;
@@ -214,13 +214,31 @@
             #Religions {
                 display: grid;
                 gap: 20px; /* Espacio entre elementos */
-                grid-template-columns: repeat(2, 1fr); /* Ajusta a dos columnas */
+                grid-template-columns: repeat(6, 1fr); /* Ajusta a dos columnas */
                 grid-gap: 20px; /* Espacio entre botones */
                 padding: 20px; /* Espacio alrededor de la sección */
                 justify-content: center; /* Centra los botones horizontalmente */
             }
 
-            .religion-button {
+            #Characters {
+                display: grid;
+                gap: 20px; /* Espacio entre elementos */
+                grid-template-columns: repeat(6, 1fr); /* Ajusta a dos columnas */
+                grid-gap: 20px; /* Espacio entre botones */
+                padding: 20px; /* Espacio alrededor de la sección */
+                justify-content: center; /* Centra los botones horizontalmente */
+            }
+
+            #Gods {
+                display: grid;
+                gap: 20px; /* Espacio entre elementos */
+                grid-template-columns: repeat(6, 1fr); /* Ajusta a dos columnas */
+                grid-gap: 20px; /* Espacio entre botones */
+                padding: 20px; /* Espacio alrededor de la sección */
+                justify-content: center; /* Centra los botones horizontalmente */
+            }
+
+            .ilustration-button {
                 width: 200px; /* Ancho fijo para todos los botones */
                 height: 200px; /* Altura fija para todos los botones */
                 margin: 10px; /* Espaciado entre botones */
@@ -238,14 +256,28 @@
                 transition: background-color 0.3s, transform 0.3s;
             }
 
-                .religion-button:hover {
+                .ilustration-button:hover {
                     background-color: rgba(0, 0, 0, 0.2); /* Efecto al pasar el ratón */
                     transform: scale(1.05); /* Aumenta ligeramente el tamaño al pasar el ratón */
                 }
 
-                .religion-button:active {
+                .ilustration-button:active {
                     background-color: #366030; /* Cambia el color de fondo cuando el botón está presionado */
                 }
+
+            #boton-password {
+                cursor: pointer;
+                padding: 10px 20px;
+                background-color: #007bff;
+                color: white;
+                border: none;
+                border-radius: 5px;
+            }
+
+            #formulario-password {
+                box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            }
+
     </style>
 </head>
 <body>
@@ -256,6 +288,7 @@
         <button class="tablinks" onclick="openTab(event, 'Religions')">Religiones</button>
         <button class="tablinks" onclick="openTab(event, 'Gods')">Dioses</button>
         <button class="tablinks" onclick="openTab(event, 'TimeLine')">TimeLine</button>
+        <button class="tablinks" onclick="openTab(event, 'Characters')">Characters</button>
     </div>
 
     <div id="Home" class="tabcontent">
@@ -266,32 +299,92 @@
     <div id="Regions" class="tabcontent">
         <div id="map-container">
             <img src="img/continentMap.png" alt="Mapa Mundial">
-            <!-- Marcadores visuales -->
-            <button class="marker" style="left: 50%; top: 15%;" data-info="Verdantia" onclick="openModal('VerdantiaModal', 'Informacion');"></button>
-            <button class="marker" style="left: 65%; top: 65%;" data-info="Stilport" onclick="openModal('StilportModal', 'Informacion');"></button>
+            <!-- Marcadores visuales
+            <button class="marker" style="left: 50%; top: 15%;" data-info="Verdantia" onclick="openModal('VerdantiaModal', 'Informacion');"></button> -->
+            <button class="marker" style="left: 72%; top: 35%;" data-info="Stilport" onclick="openModal('StilportModal', 'Informacion');"></button>
             <div class="tooltip" id="tooltip"></div>
         </div>
     </div>
 
     <div id="Races" class="tabcontent">
-
+        <h3>Razas</h3>
     </div>
 
     <div id="Religions" class="tabcontent grid">
-        <!-- Añadir la clase grid aquí -->
-        <button class="religion-button" style="background-image: url('img/Lucianismo.webp');" onclick="openModal('LucianismoModal','history');">Lucianismo</button>
-        <!-- Más botones... -->
+        <h3>Religiones</h3>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <button class="ilustration-button" style="background-image: url('img/Lucianismo.webp');" onclick="openModal('LucianismoModal','history');">Lucianismo</button>
+        <button id="contenido-secreto" class="ilustration-button" style="background-image: url('img/Lucianismo.webp'); display:none;" onclick="openModal('LucianismoModal','history');">Lucianismo</button>
     </div>
 
-    <div id="Gods" class="tabcontent">
-        <h3>TODO</h3>
+    <div id="Gods" class="tabcontent grid">
+        <h3>Diositos</h3>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <button class="ilustration-button" style="background-image: url('img/Brah’drum.webp');" onclick="openModal('Brah’drumModal','Brah’drumInformacion');">Brah’drum</button>
     </div>
 
     <div id="TimeLine" class="tabcontent">
-        <h3>TODO</h3>
+        <h3>Timeline</h3>
+    </div>
+
+    <div id="Characters" class="tabcontent grid">
+        <h3>Characters</h3>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <p></p>
+        <button class="ilustration-button" style="background-image: url('img/Pakito.png');" onclick="openModal('PakitoModal','PakitoInformation');">Pakito</button>
+        <button class="ilustration-button" style="background-image: url('img/Bahrrie.png');" onclick="openModal('BahrrieModal','BahrrieInformation');">Bahrrie</button>
+        <button class="ilustration-button" style="background-image: url('img/Shallturn.png');" onclick="openModal('ShallturnModal','ShallturnInformation');">Shallturn</button>
+        <button class="ilustration-button" style="background-image: url('img/Kitty.png');" onclick="openModal('KittyModal','KittyInformation');">Kitty</button>
+        <button class="ilustration-button" style="background-image: url('img/Warren.webp');" onclick="openModal('WarrenModal','WarrenInformation');">Warren</button>
+
+    </div>
+
+    <div id="contenido-secreto" style="display:none;">
+        <p>Este es contenido protegido por contraseña.</p>
+    </div>
+
+    <!-- Botón para abrir el formulario de contraseña -->
+    <button id="boton-password" style="position: fixed; bottom: 20px; right: 20px; z-index: 100;">
+        Dungeon Master
+    </button>
+
+    <!-- Contenedor para el formulario de contraseña, oculto inicialmente -->
+    <div id="formulario-password" style="display: none; position: fixed; bottom: 60px; right: 20px; padding: 10px; background-color: white; border: 1px solid #ccc; z-index: 101;">
+        <input type="password" id="password" placeholder="Introduce la contraseña">
+        <button onclick="verificarPassword()">Enviar</button>
     </div>
 
     <!-- Modales... -->
+    <!-- Gods -->
+    <div id="Brah’drumModal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('Brah’drumModal')">&times;</span>
+            <h2>Brah’drum</h2>
+            <ul class="tab-links">
+                <li onclick="openTabModule(event, 'Brah’drumInformacion')">Informacion</li>
+                <li onclick="openTabModule(event, 'Brah’drumTranslator')">Translator</li>
+            </ul>
+
+            <div id="Brah’drumInformacion" class="tab-content" style="display:none;">
+
+            </div>
+            <div id="Brah’drumTranslator" class="tab-content" style="display:none;">
+
+            </div>
+        </div>
+    </div>
+    <!-- Religiones -->
     <div id="VerdantiaModal" class="modal" style="display:none;">
         <div class="modal-content">
             <span class="close" onclick="closeModal('VerdantiaModal')">&times;</span>
@@ -323,6 +416,20 @@
                 <textarea id="inputText" placeholder="Escribe aquí el texto en español sin acentos..."></textarea>
                 <button onclick="translateText()">Traducir</button>
                 <div class="result" id="resultText"></div>
+            </div>
+        </div>
+    </div>
+
+    <div id="StilportModal" class="modal" style="display:none;">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('StilportModal')">&times;</span>
+            <h2>Stilport</h2>
+            <ul class="tab-links">
+                <li onclick="openTabModule(event, 'Informacion')">Informacion</li>
+            </ul>
+
+            <div id="Informacion" class="tab-content" style="display:none;">
+
             </div>
         </div>
     </div>
@@ -398,10 +505,88 @@
         </div>
     </div>
 
-    <div id="StilportModal" class="modal" style="display:none;">
+    <!-- Players -->
+    <div id="PakitoModal" class="modal">
         <div class="modal-content">
-            <span class="close" onclick="closeModal('StilportModal')">&times;</span>
-            <h2>Stilport</h2>
+            <span class="close" onclick="closeModal('PakitoModal')">&times;</span>
+            <h2>Pakito</h2>
+            <ul class="tab-links">
+                <li onclick="openTabModule(event, 'PakitoInformation')">Informacion</li>
+                <li onclick="openTabModule(event, 'PakitoSheet')">Sheet</li>
+            </ul>
+            <div id="PakitoInformation" class="tab-content active">
+                <h3>Informacion</h3>
+            </div>
+            <div id="PakitoSheet" class="tab-content">
+                <h3>Ficha aqui</h3>
+            </div>
+        </div>
+    </div>
+
+    <div id="BahrrieModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('BahrrieModal')">&times;</span>
+            <h2>Bahrrie</h2>
+            <ul class="tab-links">
+                <li onclick="openTabModule(event, 'BahrrieInformation')">Informacion</li>
+                <li onclick="openTabModule(event, 'BahrrieSheet')">Sheet</li>
+            </ul>
+            <div id="BahrrieInformation" class="tab-content active">
+                <h3>Informacion</h3>
+            </div>
+            <div id="BahrrieSheet" class="tab-content">
+                <h3>Ficha aqui</h3>
+            </div>
+        </div>
+    </div>
+
+    <div id="ShallturnModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('ShallturnModal')">&times;</span>
+            <h2>Shallturn</h2>
+            <ul class="tab-links">
+                <li onclick="openTabModule(event, 'ShallturnInformation')">Informacion</li>
+                <li onclick="openTabModule(event, 'ShallturnSheet')">Sheet</li>
+            </ul>
+            <div id="ShallturnInformation" class="tab-content active">
+                <h3>Informacion</h3>
+            </div>
+            <div id="ShallturnSheet" class="tab-content">
+                <h3>Ficha aqui</h3>
+            </div>
+        </div>
+    </div>
+
+    <div id="KittyModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('KittyModal')">&times;</span>
+            <h2>Kitty</h2>
+            <ul class="tab-links">
+                <li onclick="openTabModule(event, 'KittyInformation')">Informacion</li>
+                <li onclick="openTabModule(event, 'KittySheet')">Sheet</li>
+            </ul>
+            <div id="KittyInformation" class="tab-content active">
+                <h3>Informacion</h3>
+            </div>
+            <div id="KittySheet" class="tab-content">
+                <h3>Ficha aqui</h3>
+            </div>
+        </div>
+    </div>
+    <div id="WarrenModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('WarrenModal')">&times;</span>
+            <h2>Warren</h2>
+            <ul class="tab-links">
+                <li onclick="openTabModule(event, 'WarrenInformation')">Informacion</li>
+                <li onclick="openTabModule(event, 'WarrenSheet')">Sheet</li>
+            </ul>
+            <div id="WarrenInformation" class="tab-content active">
+                <h3>Informacion</h3>
+            </div>
+            <div id="WarrenSheet" class="tab-content">
+                <h3>Ficha aqui</h3>
+            </div>
         </div>
     </div>
     <script>
@@ -790,6 +975,26 @@
             var bookContent = document.getElementById('Book');
             bookContent.innerHTML = bookContent.innerHTML.replace(/\b(\d+)\b/g, '<span class="number">$1</span>');
         }
+
+        document.getElementById('boton-password').addEventListener('click', function () {
+            var formulario = document.getElementById('formulario-password');
+            if (formulario.style.display === 'none') {
+                formulario.style.display = 'block';
+            } else {
+                formulario.style.display = 'none';
+            }
+        });
+
+        function verificarPassword() {
+            var password = document.getElementById("password").value;
+            if (password == "S4nt1W4rr4@") {  // Reemplaza 'contraseñaSecreta' con la contraseña real
+                document.getElementById("contenido-secreto").style.display = "block";
+                document.getElementById("formulario-password").style.display = "none";
+            } else {
+                alert("Contraseña incorrecta");
+            }
+        }
+
     </script>
 </body>
 </html>
