--- a/index.html
+++ b/index.html
@@ -425,10 +425,10 @@
             <span class="close" onclick="closeModal('StilportModal')">&times;</span>
             <h2>Stilport</h2>
             <ul class="tab-links">
-                <li onclick="openTabModule(event, 'Informacion')">Informacion</li>
+                <li onclick="openTabModule(event, 'StilportInformacion')">Informacion</li>
             </ul>
 
-            <div id="Informacion" class="tab-content" style="display:none;">
+            <div id="StilportInformacion" class="tab-content" style="display:none;">
 
             </div>
         </div>
