--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 background-size: cover; /* Asegura que la imagen cubra completamente el botón */
                 background-position: center; /* Centra la imagen dentro del botón */
                 border: none;
-                border-radius: 5px;
+                border-radius: 30px;
                 cursor: pointer;
                 display: flex;
                 align-items: center;
@@ -293,7 +293,8 @@
 
     <div id="Home" class="tabcontent">
         <h3>Inicio</h3>
-        <p>Bienvenido a nuestra página web. Aquí puedes encontrar información sobre nuestros proyectos y más.</p>
+        <p>Bienvenido a Matmir, el mundo de fantasia creado para mis partidas de DND</p>
+        <p></p>
     </div>
 
     <div id="Regions" class="tabcontent">
@@ -373,14 +374,16 @@
             <h2>Brah’drum</h2>
             <ul class="tab-links">
                 <li onclick="openTabModule(event, 'Brah’drumInformacion')">Informacion</li>
-                <li onclick="openTabModule(event, 'Brah’drumTranslator')">Translator</li>
             </ul>
 
             <div id="Brah’drumInformacion" class="tab-content" style="display:none;">
-
-            </div>
-            <div id="Brah’drumTranslator" class="tab-content" style="display:none;">
-
+                <h2>Brah'drum, el Terror</h2>
+                <p>Entre las antiguas y oscuras deidades que existen desde el principio de los tiempos, <strong>Brah'drum</strong> e alza como una de las más temidas, un ser que encarna el terror y la corrupción en su forma más pura. Conocido como el Terror de los Doce Abismos, este dios es una manifestación de la desesperanza y el caos, su presencia es una maldición que se extiende por los rincones más oscuros del multiverso.</p>
+                <p>Brah'drum se representa con doce cabezas que emergen de un cuerpo amorfo, una abominación de sombras retorcidas. Cada cabeza está coronada por ojos negros como el vacío mismo, con pupilas blancas del tamaño de guisantes, que parecen penetrar en el alma de aquellos que se atreven a mirarlos. Los ojos de Brah'drum no solo ven el presente, sino también los miedos más profundos de cada ser, extrayendo sus peores pesadillas para convertirlas en realidad.</p>
+                <p>Se dice que cada uno de estos ojos tiene un propósito único: uno observa el pasado, reviviendo los traumas olvidados; otro se fija en el futuro, mostrando visiones de desesperación inevitable; mientras que los restantes se enfocan en el presente, retorciendo la realidad hasta que solo queda el caos. Las cabezas de Brah'drum, siempre en movimiento, emiten susurros inaudibles para los mortales, pero cuyo eco es capaz de desatar la locura en los más sabios.</p>
+                <p>El origen de Brah'drum permanece envuelto en misterio. Algunos textos apócrifos sugieren que nació del primer grito de agonía del cosmos, un fragmento de la oscuridad primordial que nunca fue completamente suprimido por la creación del universo. Desde entonces, Brah'drum ha observado a las criaturas que habitan los mundos, no con una curiosidad benevolente, sino con una intención maliciosa, esperando el momento para desatar su poder destructivo.</p>
+                <p>El culto a Brah'drum es tanto un secreto como una prueba de la locura de aquellos que lo siguen. Solo los más desesperados, aquellos que han perdido toda esperanza o quienes buscan poder a cualquier costo, se atreven a invocar su nombre. Sin embargo, ningún mortal ha conseguido retener la cordura tras entrar en contacto con su esencia, y aquellos que lo intentan son arrastrados hacia una espiral de locura y autodestrucción, dejándolos como cascarones vacíos, meras sombras de lo que alguna vez fueron.</p>
+                <p>En todas las historias que rodean a Brah'drum, una cosa es segura: enfrentarse a él no es solo desafiar el mal, sino desafiar la misma esencia de la desesperación y el terror que acecha en lo más profundo del ser.</p>
             </div>
         </div>
     </div>
@@ -429,7 +432,8 @@
             </ul>
 
             <div id="StilportInformacion" class="tab-content" style="display:none;">
-
+                <p>Strilport es una ciudad portuaria vibrante situada en la costa oriental de un vasto continente conocido por sus tierras fértiles y sus rutas comerciales vitales. La ciudad se encuentra entre la desembocadura de dos rios: el río <strong>Grimsby</strong> y el rio <strong>Yitura</strong> que serpentea desde las montañas del interior hacia el mar, proporcionando una vía navegable natural que ha convertido a Strilport en un centro comercial clave. El puerto de Strilport está construido sobre una bahía natural protegida, lo que permite que barcos de todos los tamaños atraquen con seguridad.</p>
+                <p>La ciudad está dividida en varios distritos, cada uno con su propio carácter distintivo. Al norte, se alzan las Colinas de Marfil, una serie de colinas suaves cubiertas de piedra caliza blanca que dan a Strilport un aspecto brillante y majestuoso cuando se las ve desde el mar. Al oeste, el Bosque de Veldor proporciona madera y caza, mientras que al sur se extienden vastos campos de cultivo y tierras de pastoreo.</p>            
             </div>
         </div>
     </div>
